--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,11 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+postgres/
+
+# env
+
+.env
+.env.prod
+.env.dev
