--- a/.env.template
+++ b/.env.template
@@ -3,3 +3,8 @@ POSTGRES_DB=shopping
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
+
+PORT=3000
+API_HOST=http://127.0.0.1:3000/api/v1
+
+JWT_SECRET=JWT_SECRET
